fixed an overlap with the li's and gave the locations their own class

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ img {
   width: 100%;
 }
 
-li {
+.location {
   flex: 1;
   margin-top: 15px;
   margin-bottom: 15px;
